# hermes-agent-rs

./: .dockerignore  .gitignore  AGENTS.md  CI_CD_RUNBOOK.md  Cargo.toml  Dockerfile  HOOK_PAYLOAD_SCHEMA.md  README.md  README_JA.md  README_KO.md  README_ZH.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/unified-runtime-architecture/: .config.kiro  design.md  requirements.md  tasks.md
apps/client/: pnpm-lock.yaml
apps/client/src/: App.tsx  api.ts  types.ts
apps/client/src-tauri/: tauri.conf.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: hermes_client.rs  lib.rs  local_agent.rs  persistence.rs
apps/client/src/components/: ChatView.tsx  MessageBubble.tsx  SettingsView.tsx  Sidebar.tsx
apps/dashboard/: README.md  eslint.config.js  vite.config.ts
apps/dashboard/src/: App.tsx  index.css
apps/mobile-app/: App.tsx  README.md  app.json  package.json  pnpm-lock.yaml
apps/mobile-app/__tests__/: protocol_compat.test.ts
apps/mobile-app/ios/: Podfile
apps/mobile-app/src/: api.ts  storage.ts  theme.ts  types.ts
apps/web-app/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/web-app/electron/: README.md  TAURI_PARITY.md  electron-builder.config.cjs
apps/web-app/src/: App.tsx  api.ts  desktopBridge.ts  main.tsx  telemetry.ts  types.ts
charts/: README.md
charts/fly/: .gitignore  CONTROL_PLANE_AUTOPROVISION.md  PRODUCTION_READINESS.md  control-plane-deploy.ts  fly.toml.tmpl  package.json  pnpm-lock.yaml  provision-tenant.sh  render-fly-toml.sh  secrets.example.env  spec-to-provision.ts  tenant-spec.example.yaml  tsconfig.json
charts/tenant-runtime/: Chart.yaml  values.schema.json  values.yaml
charts/tenant-runtime/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
crates/hermes-acp/src/: lib.rs
crates/hermes-agent/: Cargo.toml
crates/hermes-agent/src/: agent_builder.rs  agent_loop.rs  context.rs  context_references.rs  copilot_acp.rs  lib.rs  local_agent_service.rs  plugins.rs  provider.rs  steer.rs
crates/hermes-agent/tests/: agent_builder_unit.rs  local_agent_service_unit.rs  prop_agent_service.rs  prop_session_persistence.rs
crates/hermes-app/: package.json
crates/hermes-app/src/: App.tsx  api.ts  types.ts
crates/hermes-app/src-tauri/: Cargo.toml
crates/hermes-app/src-tauri/src/: hermes_client.rs  lib.rs  local_agent.rs  main.rs  persistence.rs
crates/hermes-bus/: Cargo.toml
crates/hermes-bus/src/: in_process.rs  lib.rs  messages.rs  remote_agent_service.rs  transport.rs
crates/hermes-bus/tests/: prop_bus_messages.rs  prop_bus_transport.rs
crates/hermes-cli/: Cargo.toml
crates/hermes-cli/src/: app.rs  auth.rs  banner.rs  cli.rs  commands.rs  copilot_auth.rs  doctor.rs  env_loader.rs  gateway_cmd.rs  lib.rs  live_messaging.rs  main.rs  mcp_config.rs  model_switch.rs  profiles.rs  providers.rs  setup.rs  skills_config.rs  skin_engine.rs  tools_config.rs  tui.rs  update.rs
crates/hermes-config/src/: config.rs  lib.rs  paths.rs  platform.rs
crates/hermes-config/tests/: prop_config_roundtrip.rs
crates/hermes-core/src/: lib.rs  traits.rs
crates/hermes-cron/src/: lib.rs
crates/hermes-dashboard/: Cargo.toml
crates/hermes-dashboard/src/: lib.rs  main.rs  security.rs
crates/hermes-dashboard/tests/: dashboard_smoke.rs  http_smoke.rs  prop_status_schema.rs
crates/hermes-eval/: Cargo.toml
crates/hermes-eval/src/: batch_runner.rs  lib.rs  mini_swe_runner.rs  trajectory_compressor.rs
crates/hermes-gateway/: Cargo.toml
crates/hermes-gateway/src/: channel_directory.rs  commands.rs  delivery.rs  gateway.rs  gateway_requirements.rs  hook_payloads.rs  hooks.rs  lib.rs  markdown_split.rs  mirror.rs  pairing.rs  platform_registry.rs  platform_requirements.rs  session.rs  sticker_cache.rs
crates/hermes-gateway/tests/: platform_registry_unit.rs  prop_platform_registry.rs
crates/hermes-http/src/: lib.rs
crates/hermes-intelligence/src/: display.rs  lib.rs  model_metadata.rs  self_evolution.rs  usage_pricing.rs
crates/hermes-intelligence/tests/: prop_router.rs
crates/hermes-mcp/src/: lib.rs
crates/hermes-parity-tests/: Cargo.toml  PARITY_FIXTURE_STATUS.md  PYTHON_BASELINE.txt
crates/hermes-parity-tests/fixtures/: README.md  registry.json
crates/hermes-parity-tests/fixtures/approval/: command_safety.json
crates/hermes-parity-tests/fixtures/error_classifier/: classify_errors.json
crates/hermes-parity-tests/fixtures/model_metadata/: context_and_capabilities.json
crates/hermes-parity-tests/fixtures/usage_pricing/: billing_routes.json
crates/hermes-parity-tests/fixtures/v4a_patch/: parse_patch.json
crates/hermes-parity-tests/src/: harness.rs  lib.rs
crates/hermes-runtime/: Cargo.toml
crates/hermes-runtime/src/: lib.rs
crates/hermes-runtime/tests/: plugin_tool_registry_contract.rs
crates/hermes-server/: Cargo.toml
crates/hermes-server/src/: lib.rs  main.rs  security.rs
crates/hermes-server/src/dashboard/: analytics.rs  config.rs  cron.rs  env.rs  logs.rs  mod.rs  sessions.rs  skills.rs  status.rs  stubs.rs
crates/hermes-server/tests/: dashboard_smoke.rs  http_smoke.rs  prop_status_schema.rs
crates/hermes-skills/src/: lib.rs
crates/hermes-telemetry/src/: lib.rs
crates/hermes-tools/src/: credential_guard.rs  lib.rs
crates/hermes-tools/tests/: prop_registry.rs
crates/hermes-transport/: Cargo.toml
crates/hermes-transport/src/: lib.rs
scripts/: hermes
scripts/ci/: electron-check.sh  keypath-e2e.sh  mobile-check.sh  protocol-e2e-local.sh  protocol-matrix-check.sh  protocol-sdk-check.sh
sdk/protocol-fixtures/: ws_envelopes.json
sdk/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
sdk/typescript/scripts/: sync-protocol-schema.mjs
sdk/typescript/src/: e2e.smoke.test.ts  index.test.ts  index.ts
web/: package-lock.json  package.json  vite.config.ts
web/src/components/: Backdrop.tsx  LanguageSwitcher.tsx  OAuthLoginModal.tsx  ThemeSwitcher.tsx
web/src/pages/: LogsPage.tsx  SessionsPage.tsx  StatusPage.tsx
(+67 files in other folders)
