[package]
name = "hermes-agent"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Agent loop engine for Hermes Agent"

[dependencies]
hermes-core = { workspace = true }
hermes-auth = { workspace = true }
hermes-config = { workspace = true }
hermes-intelligence = { workspace = true }
hermes-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
which = "7"
eventsource-stream = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3"
lazy_static = "1"
dirs = "6"
rusqlite = { workspace = true }
serde_yaml = { workspace = true }
shlex = "1.3.0"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
hermes-environments = { workspace = true }
hermes-skills = { workspace = true }
