[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI/TUI interface for Hermes Agent"

[features]
default = []
otlp = ["hermes-telemetry/otlp"]

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
hermes-core = { workspace = true }
hermes-agent = { workspace = true }
hermes-tools = { workspace = true }
hermes-config = { workspace = true }
hermes-gateway = { workspace = true, features = [
    "telegram",
    "discord",
    "slack",
    "whatsapp",
    "signal",
    "matrix",
    "mattermost",
    "dingtalk",
    "feishu",
    "wecom",
    "weixin",
    "bluebubbles",
    "email",
    "sms",
    "homeassistant",
    "api-server",
    "webhook",
] }
hermes-cron = { workspace = true }
hermes-environments = { workspace = true }
hermes-mcp = { workspace = true }
hermes-acp = { workspace = true }
hermes-skills = { workspace = true }
hermes-auth = { workspace = true }
hermes-telemetry = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dirs = "6"
reqwest = { workspace = true, features = ["blocking"] }
flate2 = "1"
tar = "0.4"
serde_yaml = "0.9"
regex = { workspace = true }
urlencoding = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
wiremock = "0.6"
chrono = { workspace = true }
hermes-core = { workspace = true }
hermes-cron = { workspace = true }