[package]
name = "hermes-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent evaluation harness for Hermes Agent (Terminal-Bench, SWE-bench, and more)"

[features]
default = []
# `AgentLoopRollout` — see `src/agent_rollout.rs`
agent-loop = ["dep:hermes-agent"]

[dependencies]
hermes-agent = { workspace = true, optional = true }
hermes-core = { workspace = true }
hermes-environments = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
