[package]
name = "hermes-transport"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Wire-level transport types and JSON Schemas shared between Hermes server, cloud control plane, SDKs and front-ends"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
