[package]
name = "hermes-app"
version = { workspace = true }
edition = { workspace = true }
description = "Hermes Agent — Cross-platform App"
default-run = "hermes-app"

[lib]
name = "hermes_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Hermes core (local mode)
hermes-core = { workspace = true }
hermes-agent = { workspace = true }
hermes-tools = { workspace = true }
hermes-config = { workspace = true }
hermes-environments = { workspace = true }
hermes-telemetry = { workspace = true }

# Shared
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tracing = { workspace = true }

# Remote mode (HTTP + WebSocket client)
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
